# weekly_dev

./: .gitignore  .gitmodules  README.md
clip_automation_poc/: .claudeignore  .gitignore  CLAUDE.md  README.md  pyproject.toml
clip_automation_poc/docs/: PLANNING.md  SYSTEM_DESIGN.md
clip_automation_poc/notebooks/: 01_pydeck_experiment.ipynb  02_mesh_debug.ipynb  02_tokyo_23wards_timeseries.ipynb  03_prophet_prediction_analysis.ipynb
clip_automation_poc/scripts/: README.md  README_MESH.md  convert_to_utf8.py  create_ml_dataset.py  generate_mesh_master.py  generate_mesh_price_variations.py  prepare_aggregated_stats_2025.py  train_price_estimator.py  train_tsubo_price_model.py  visualize_mesh_colored.py  visualize_timeseries_example.py
clip_automation_poc/scripts/archive/: aggregator_realdata_example.py  timeseries_analysis_example.py  visualize_timeseries_example.py
clip_automation_poc/src/real_state_geo_core/: utils.py
daily_routine/: .env.example  .gitignore  pyproject.toml
daily_routine/.claude/: CLAUDE.md  settings.json
daily_routine/.claude/rules/: gemini-models.md
daily_routine/3dcg_viewer/: README.md
daily_routine/3dcg_viewer/blender_learning/: note.md  phase0_note.md  phase1_note.md  phase2_note.md  phase3_note.md
daily_routine/blender_level_up/datasource/: .gitignore
daily_routine/configs/: global.yaml
daily_routine/docs/adrs/: 001_video_generation_ai.md  002_image_generation_ai.md  003_video_generation_workflow.md
daily_routine/docs/claude-plans/: cheerful-bubbling-flame.md  curried-frolicking-horizon.md  ethereal-giggling-puzzle.md  fizzy-hugging-stonebraker.md  glistening-doodling-popcorn.md  image-gen-best-practices-plan.md  iridescent-leaping-stream.md  jiggly-wandering-goblet.md  keen-inventing-tide.md  layered-marching-blueprint.md  melodic-tumbling-balloon.md  modular-waddling-seahorse.md  parallel-snuggling-crayon.md  phase-b1-scene-generation-plan.md  phase-c-image-tasks-plan.md  prancy-stirring-bentley.md  sequential-herding-octopus.md  sunny-exploring-axolotl.md  synchronous-hopping-sunbeam.md
daily_routine/docs/designs/: asset_generator_design.md  audio_engine_design.md  cli_pipeline_design.md  fp2v_image_to_3d.md  fp2v_svg_to_blender.md  fp2v_v2v_photorealistic.md  image_generation_ai_evaluation_design.md  intelligence_engine_design.md  project_skeleton_design.md  scenario_engine_design.md  t1_overall_flow.md  video_ai_poc_design.md  visual_core_design.md
daily_routine/docs/guidelines/: code-style.md  development_process.md  visual_prompt.md
daily_routine/docs/image_gen_best_practices/: README.md  background_change.md  character_generation.md  character_swap.md  environment_generation.md  pose_change.md  scene_generation.md  text_removal.md
daily_routine/docs/memo/: 3dcg_ai_video_research.md  3dcg_learning_strategy_discussion.md  3dcg_poc_1.md  3dcg_poc_1_1.md  3dcg_poc_2.md  3dcg_poc_3.md  3dcg_poc_4.md  3dcg_poc_5.md  3dcg_poc_6.md  3dcg_poc_7.md  3dcg_progress.md  business.md  coffee.md  kling_v2v_3dcg_optimization.md  kling_v3_v2v_best_practices.md  layout_research_plan.md  layout_research_result.md  meshy_vs_tripo_comparison.md  roadmap.md  screen_capture_for_ai.md  story_board_spec.md  terrain_tool_research.md  v2v_comprehensive_research.md  vision.md
daily_routine/docs/procedures/: 3dcg_layout_pipeline.md  api_key_setup.md  audio_placement.md  claude_code_pipeline_support.md  image_gen_poc.md  project_setup.md  video_ai_poc.md
daily_routine/docs/specs/: draft.md  initial.md
daily_routine/floor_plan_to_video/: .gitignore  README.md
daily_routine/poc/: .gitignore  keyframe_no_char_verify.py  keyframe_style_continuity.py  visual_core_verify.py
daily_routine/poc/3dcg_poc0_a/: memo.md
daily_routine/poc/3dcg_poc0_b/: 3dcg_report.md  memo.md
daily_routine/poc/3dcg_poc0_c/: memo.md
daily_routine/poc/3dcg_poc2/: tripo_image_to_3d.py
daily_routine/poc/3dcg_poc3/: extract_floor_plan.py  layout_scorer.py  save_iteration.py
daily_routine/poc/3dcg_poc4/: memo.md
daily_routine/poc/3dcg_poc5/: memo.md
daily_routine/poc/seamless/: plan.md  (+40 more)
daily_routine/research/: 3dcg_learning_strategy.md  procedural_terrain_blender.md
daily_routine/scripts/: run_blender.sh  svg_path_analyzer.py
daily_routine/seeds/: gemini_prompt.md
daily_routine/tests/: test_asset_client.py  test_asset_generator.py  test_asset_prompt.py  test_cli.py  test_config.py  test_keyframe_engine.py  test_keyframe_prompt.py  test_visual_client.py  test_visual_engine.py  test_visual_gen4_image.py
daily_trade/: .dockerignore  .gitignore  API_README.md  Dockerfile  README.md  build_config.yaml  docker-compose.yaml  pyproject.toml  run_server.py  train_config.yaml
daily_trade/config/: dataset_config.yaml  exp_001_model_config.yaml  exp_002_early_stopping_fix.yaml  exp_003_class_weight_fix.yaml  exp_004_stationary_features.yaml  exp_005_feature_engineering.yaml  exp_005b_no_day_of_month.yaml  exp_006_regularization.yaml  exp_007_lag_features.yaml  exp_008_threshold_optimization.yaml  model_config.yaml  symbols.yaml
daily_trade/docs/: BUILD_DATASET.md  CONTAINER_TESTING.md  EXPERIMENT_FLOW.md  EXPERIMENT_OVERVIEW.md  EXPERIMENT_SYSTEM_PROMPT.md  FORECAST_MODEL_DEFINE_DOC.md  FORECAST_MODEL_DESIGN_DOC.md  SYSTEM_PROMPT.md  TRAIN_MODEL.md
daily_trade/example/: firestore.py
daily_trade/experiments/: EXPERIMENT_LOG.md  RESTART_GUIDE.md  STATUS.yaml  exp_001_plan.yaml  update_status.sh
daily_trade/notebooks/: dataset_visualization.ipynb
daily_trade/shell/: latest_dataset.sh  latest_train.sh
sns_ai_automation_agency/: .env.example  .gitignore  README.md  gs_upload.ipynb  langgraph_agent_access_workflow.ipynb  langgraph_agent_restaurant_workflow.ipynb  langgraph_agent_scene_workflow.ipynb  langgraph_agent_shopping_workflow.ipynb  langgraph_agent_thumbnail_workflow.ipynb  pyproject.toml
sns_ai_automation_agency/docs/: DEFINISION_DOC.md  DESING_DOC.md
sns_ai_automation_agency/notebooks/: gemini_image_generation_workflow.ipynb  gs_upload.ipynb  image_download.py  langgraph_agent_station_board_workflow.ipynb  tts_generate.ipynb  tts_generate.py
(+330 files in other folders)
