[project]
name = "daily-trade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "fastapi>=0.119.0",
    "google-cloud-firestore>=2.21.0",
    "uvicorn>=0.37.0",
    "email-validator>=2.0.0",
    "yfinance>=0.2.66",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "scipy>=1.16.2",
    "tenacity>=9.1.2",
    "ta>=0.11.0",
    "lightgbm>=4.5.0",
    "scikit-learn>=1.6.0",
    "pyyaml>=6.0.0",
    "plotly>=6.3.1",
    "ipykernel>=7.1.0",
    "nbformat>=5.10.4",
    "statsmodels>=0.14.5",
    "matplotlib>=3.10.7",
]


[dependency-groups]
dev = [
    "ruff>=0.14.2",
]


[tool.setuptools]
packages = ["daily_trade"]

[tool.setuptools.package-dir]
"daily_trade" = "src/daily_trade"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
# Enable a comprehensive set of linting rules
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    # "N",    # pep8-naming
    # "D",    # pydocstyle
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "ICN",  # flake8-import-conventions
    "PIE",  # flake8-pie
    "PYI",  # flake8-pyi
    "Q",    # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
    "PL",   # Pylint
    "RUF",  # Ruff-specific rules
]

ignore = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
    "E501",  # Line too long (handled by formatter)
    "PLR0913",  # Too many arguments to function call
    "PLR2004",  # Magic value used in comparison
    "RUF002",  # Redundant `else` after `return`
    "ERA001",  # Ignore eradicator warnings about commented-out code
    "SIM108",  # Use `set` literal instead of `set()`
    "PLR0915", # Too many statements in function
    "RUF003",
    "RUF001",  # Ignore redundant `pass` statements
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"test_*.py" = ["D100", "D101", "D102", "D103", "ARG001"]  # Less strict for tests
"**/tests/**/*.py" = ["D100", "D101", "D102", "D103", "ARG001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["daily_trade"]
force-sort-within-sections = true

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.flake8]
max-line-length = 120
extend-ignore = [
    "E203",  # Whitespace before ':' (conflicts with black)
    "E501",  # Line too long (handled by black)
    "W503",  # Line break before binary operator (conflicts with black)
    "W504",  # Line break after binary operator
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
]
per-file-ignores = [
    "__init__.py:F401",  # Allow unused imports in __init__.py
]
